--- a/.tmp/public/styles/main.css
+++ b/.tmp/public/styles/main.css
@@ -1,3 +1,7 @@
+.dashboard{
+    max-width:100%;
+}
+
 .background{
 	background: url('../images/mainBackground.jpg');
 	 background-size: cover;
@@ -13,3 +17,16 @@
 .margin-top-20{
 	margin-top:20px;
 }
+.fabSpeedDialdemoBasicUsage .text-capitalize {
+  text-transform: capitalize; }
+.fabSpeedDialdemoBasicUsage .md-fab:hover, .fabSpeedDialdemoBasicUsage .md-fab.md-focused {
+  background-color: #000 !important; }
+.fabSpeedDialdemoBasicUsage p.note {
+  font-size: 1.2rem; }
+.fabSpeedDialdemoBasicUsage .lock-size {
+  min-width: 300px;
+  min-height: 300px;
+  width: 300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto; }
