push with angular materal styles and fullcalendar

--- a/.tmp/public/styles/main.css
+++ b/.tmp/public/styles/main.css
@@ -30,3 +30,9 @@
   height: 300px;
   margin-left: auto;
   margin-right: auto; }
+md-bottom-sheet{
+    margin-bottom:20px;
+}
+ui-calendar{
+    background: #607d8b  !important;
+}
